# FastAPI-Assignment-Hard

./: .env  .gitignore  conftest.py  main.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
migrations/models/: 0_20250326144351_init.py  1_20250326144407_update.py  2_20250331101901_update.py  3_20250403172912_update.py  4_20250404140022_update.py  5_20250404140200_update.py  6_20250408102900_update.py
src/configs/: __init__.py  base.py  database.py
src/middleware/: auth.py
src/models/: likes.py  movies.py  reviews.py  users.py
src/routers/: like_router.py  movie_router.py  review_router.py  user_router.py
src/schemas/: likes.py  movies.py  users.py
src/services/: auth.py  file.py  jwt.py
src/tests/: test_like_router.py  test_movie_router.py  test_review_router.py  test_user_router.py
src/tests/utils/: cleanup_test_files.py  fake_file.py
src/utils/: file.py
tmdb/: .env  crawler.py
tmdb/api_requests/: get_movie_cast.py  get_movie_details.py  get_movie_genres.py  get_movie_list.py
tmdb/configs/: __init__.py  base.py  database.py  params.py
tmdb/queries/: insert_genres.py  insert_movie_genres.py  insert_movie_list.py
tmdb/utils/: image.py  validate_not_exist_genre_in_db.py  validate_not_exist_movie_in_db.py
